# gam

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.org  main.py  pyproject.toml  pytest.ini
src/composer/: __init__.py  cli.py  stack_manager.py
src/composer/commands/: category.py  status.py  tag.py  validate.py
src/gam/: __init__.py  cli.py  stack.py  stack_manager.py
src/gam/commands/: __init__.py  autostart.py  category.py  down.py  logs.py  ls.py  restart.py  search.py  show.py  status.py  tag.py  up.py  validate.py
test/: __init__.py  conftest.py
test/integration/: __init__.py  conftest.py  test_autostart.py  test_category.py  test_down.py  test_ls.py  test_restart.py  test_search.py  test_show.py  test_status.py  test_tag.py  test_up.py  test_validate.py
test/unit/: __init__.py  conftest.py  test_autostart.py  test_category.py  test_down.py  test_logs.py  test_ls.py  test_restart.py  test_search.py  test_show.py  test_status.py  test_tag.py  test_up.py  test_validate.py
